--- a/src/app/componentes/lista-livros/lista-livros.component.html
+++ b/src/app/componentes/lista-livros/lista-livros.component.html
@@ -1,7 +1,9 @@
 <section>
     <h2 class="texto-titulo">
-        Minhas Leituras
+      Minhas leituras
     </h2>
-    <span class="linha-destaque linha-destaque--grande">   
-    </span>
-</section>
+    <span class="linha-destaque linha-destaque--grande"></span>
+  </section>
+  @for(genero of generos; track genero) {
+    <app-genero-literario [genero]="genero"></app-genero-literario>
+  }
