--- a/src/app/componentes/rodape/rodape.component.html
+++ b/src/app/componentes/rodape/rodape.component.html
@@ -1,3 +1,5 @@
 <footer class="banner-rodape">
-    <img src="rodape.png" alt="rodape">
-</footer>
+    <img 
+      src="rodape.png" 
+      alt="Rodape da aplicação">
+  </footer>
